--- a/styles-index.css
+++ b/styles-index.css
@@ -100,6 +100,7 @@ body {
     }
 
     .block-one {
+        height: 90%;
         flex-direction: column;
         font-size: medium;
         text-align: center;
