--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ body {
         width: 100%;
         height: 20%;
         object-fit: cover;
-        object-position: 0 5%;
+        object-position: 0 4.5%;
         border: 10px;
         
     }
@@ -102,13 +102,14 @@ body {
         width: 100%;
         height: 40%;
         object-fit: cover;
-        object-position: 0 70%;
+        object-position: 0 40%;
         border: 10px;
         
     }
 
     .Task-info {
         width: 96%;
+        height: 40%;
         line-height: 1.5;
         margin: 0%;
         border: solid 10px black;
