--- a/styles-index.css
+++ b/styles-index.css
@@ -128,6 +128,7 @@ body {
 
     .Task-info {
         width: 96%;
+        height: 40%;
         line-height: 0.5;
         margin: 0%;
         border: solid 10px black;
