--- a/styles-plans.css
+++ b/styles-plans.css
@@ -3,17 +3,19 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: left;
     margin: 0%;
     background: linear-gradient(45deg, rgb(77, 192, 218), rgb(250, 155, 188));
 }
 .navbar{
+    display: flex;
     height: 10%;
     width: 100%;
     background-color: black;
     color: rgb(253, 185, 75);
     font-size: 30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    align-items: center;
+    align-content: center;
 }
 .navbar a{
     padding-top: 20px;
@@ -22,12 +24,8 @@ body {
     text-decoration: none;
 }
 .navbar a:hover{
-    height: 10%;
-    width: 100%;
-    background-color: black;
     color: rgb(248, 228, 196);
     font-size: 32px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .block-one{
